<resources>
    <string name="app_name">Junior Design Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="timer_name_hint">timer name</string>
    <string name="countdown_radio_label">Countdown</string>
    <string name="alarm_radio_label">Alarm</string>
    <string name="add_timer_button">Add Timer</string>
    <string name="add_early_button">Add Early Notification</string>
    <string name="seconds_text">s</string>
    <string name="minutes_text">m</string>
    <string name="hours_text">h</string>
    <string name="view_timers_button">View Timers</string>
    <string name="title_activity_edit">EditActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addString">add</string>
</resources>
