<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTimerActivity">

    <NumberPicker
        android:id="@+id/numberPickerSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewM"
        app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes"
        app:layout_constraintVertical_bias="1.0" />

    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/alarmNameEditText"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="@+id/alarmNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/alarmNameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <NumberPicker
        android:id="@+id/numberPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toEndOf="@+id/alarmNameEditText"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewH"
        android:layout_width="46dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/hours_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerHours"
        app:layout_constraintEnd_toEndOf="@+id/alarmNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberPickerHours"
        app:layout_constraintTop_toTopOf="@+id/numberPickerHours"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textViewM"
        android:layout_width="46dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/minutes_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textViewS"
        android:layout_width="46dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/seconds_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberPickerSeconds"
        app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/buttonAddTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_timer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/alarmNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timer_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="259dp"
        android:layout_height="134dp"
        android:checkedButton="@+id/radioButtonCountdown"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddTimer"
        app:layout_constraintVertical_bias="0.905">

        <RadioButton
            android:id="@+id/radioButtonCountdown"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/countdown_radio_label"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButtonAlarm"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/alarm_radio_label"
            android:textSize="25sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>